# Software-Arch

./: README.md
hw_0/: README.md  components.md  (+4 more)
socialnet/: CMakeLists.txt  README.md  commands.sql  helper.h  index.yaml  load_data.cpp  load_data.sh  main.cpp  messenger_main.cpp  performance.md  start.sh  start_messenger.sh  start_wall.sh  test_cache.sh  test_no_cache.sh  web_interface_handler.h
socialnet/Docker/: docker-compose.yml
socialnet/Docker/messenger_server/: Dockerfile
socialnet/Docker/proxysql/: proxysql.cnf
socialnet/Docker/social_network/: Dockerfile
socialnet/Docker/user_server/: Dockerfile
socialnet/Docker/wall_server/: Dockerfile
socialnet/messenger_server/: CMakeLists.txt  Dockerfile  http_messenger_server.h  messenger.yaml  messenger_main.cpp
socialnet/messenger_server/database/: database.cpp  database.h  messenger.cpp  messenger.h
socialnet/messenger_server/web_server/: http_messenger_server.h  http_request_factory.h
socialnet/messenger_server/web_server/handlers/: messenger_handler.h
socialnet/tmpbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  load_data  socialnet
socialnet/user_server/: CMakeLists.txt  Dockerfile  http_request_factory.h  http_user_server.h  index.yaml  main.cpp
socialnet/user_server/database/: database.cpp  database.h  user.cpp  user.h
socialnet/wall_server/: CMakeLists.txt  Dockerfile  http_wall_server.h  wall.yaml  wall_main.cpp
socialnet/wall_server/database/: wall.cpp  wall.h
socialnet/wall_server/handlers/: wall_handler.h
socialnet/wall_server/web_server/: http_request_factory.h
(+7 files in other folders)
